--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,7 +55,7 @@ android {
         applicationId "my.com.TPTG"
 //        minSdkVersion 21 // Explicitly set minSdkVersion
 //        targetSdkVersion flutter.targetSdkVersion
-        minSdkVersion 21 // Explicitly set minSdkVersion
+        minSdkVersion flutter.minSdkVersion // Explicitly set minSdkVersion
         targetSdkVersion 36
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
